--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,16 @@ jobs:
       - name: Install dependencies
         run: sudo apt install libgmp-dev libmpfr-dev libmpc-dev build-essential gcc git sed libboost-program-options-dev binutils -y
       
+      # Fully cache fully built ndless itself
+      - uses: actions/cache@v2
+        id: ndless-full-cache
+        with:
+          path: .github/workflows/Ndless/
+          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
+          key: ${{ runner.os }}-ndless-full-cache-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+      
       - name: Get Ndless
+        if: steps.ndless-full-cache.outputs.cache-hit != 'true'
         run: |
             cd .github/workflows/
             git clone --recursive https://github.com/ndless-nspire/Ndless.git
@@ -24,43 +33,42 @@ jobs:
       # build the toolchain first
       # it takes ~40min to build, so we want to avoid that whenever possible!
       - uses: actions/cache@v2
+        if: steps.ndless-full-cache.outputs.cache-hit != 'true'
         id: toolchain-cache
         with:
           path: .github/workflows/Ndless/ndless-sdk/toolchain/install
           # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
           key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
       - name: Build toolchain
-        if: steps.toolchain-cache.outputs.cache-hit != 'true'
+        if: steps.toolchain-cache.outputs.cache-hit != 'true' && steps.ndless-full-cache.outputs.cache-hit != 'true'
         working-directory: .github/workflows/Ndless/ndless-sdk/toolchain
         run: ./build_toolchain.sh
       
       # ndless
       - name: Set up PATH
+        if: steps.ndless-full-cache.outputs.cache-hit != 'true'
         run: |
           echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/toolchain/install/bin" >> $GITHUB_PATH
           echo "$GITHUB_WORKSPACE/.github/workflows/Ndless/ndless-sdk/bin" >> $GITHUB_PATH
-          
-      # ndless-sdk-bin cache
-      - uses: actions/cache@v2
-        id: ndless-sdk-bin-cache
-        with:
-          path: .github/workflows/Ndless/ndless-sdk/bin
-          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ runner.os }}-ndless-sdk-bin-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+      
+      - name: Build toolchain
+        if: steps.ndless-full-cache.outputs.cache-hit != 'true'
+        working-directory: .github/workflows/Ndless/ndless-sdk/toolchain
+        run: ./build_toolchain.sh
           
       - name: Build
-        if: steps.ndless-sdk-cache.outputs.cache-hit != 'true'
+        if: steps.ndless-full-cache.outputs.cache-hit != 'true'
         working-directory: .github/workflows/Ndless/
         run: make -j$(nproc --all)
         
       - name: Upload Ndless Artifacts (1)
-        if: steps.ndless-sdk-cache.outputs.cache-hit != 'true'
+        if: steps.ndless-full-cache.outputs.cache-hit != 'true'
         uses: actions/upload-artifact@v2.2.4
         with:
           name: ndless-sdk
           path: .github/workflows/Ndless/ndless-sdk/bin/*
       - name: Upload Ndless Artifacts (2)
-        if: steps.ndless-sdk-cache.outputs.cache-hit != 'true'
+        if: steps.ndless-full-cache.outputs.cache-hit != 'true'
         uses: actions/upload-artifact@v2.2.4
         with:
           name: ndless-sdk
@@ -84,21 +92,21 @@ jobs:
 #            cd .github/workflows/
 #            git clone --recursive https://github.com/ndless-nspire/Ndless.git
           
-      # ndless-sdk-bin cache
+      # Fully cache fully built ndless itself
       - uses: actions/cache@v2
-        id: ndless-sdk-bin-cache
+        id: ndless-full-cache
         with:
-          path: .github/workflows/Ndless/ndless-sdk/bin
+          path: .github/workflows/Ndless/
           # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ runner.os }}-ndless-sdk-bin-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+          key: ${{ runner.os }}-ndless-full-cache-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
       
       # Ndless toolchain cache
-      - uses: actions/cache@v2
-        id: toolchain-cache
-        with:
-          path: .github/workflows/Ndless/ndless-sdk/toolchain/install
-          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
-          key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
+#      - uses: actions/cache@v2
+#        id: toolchain-cache
+#        with:
+#          path: .github/workflows/Ndless/ndless-sdk/toolchain/install
+#          # gcc/binutils/etc versions are in build_toolchain.sh, so that'll be part of our cache key
+#          key: ${{ runner.os }}-${{ hashFiles('.github/workflows/Ndless/ndless-sdk/toolchain/build_toolchain.sh') }}
           
       # ndless
       - name: Set up PATH
